# mvsep-gui

./: .gitignore  README.md  README_ja.md  README_zh.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  main.yml
aur/: .SRCINFO  PKGBUILD
docs/plans/: 2026-03-05-mvsep-gui-rust-design.md  2026-03-05-mvsep-gui-rust-implementation.md
mvsep_gui/: __init__.py  __main__.py
